src/qt/libqgraphicsscene.bf

	[LinkName("QGraphicsScene_MousePressEvent")]
	public static extern void QGraphicsScene_MousePressEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_MouseMoveEvent")]
	public static extern void QGraphicsScene_MouseMoveEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_MouseReleaseEvent")]
	public static extern void QGraphicsScene_MouseReleaseEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_MouseDoubleClickEvent")]
	public static extern void QGraphicsScene_MouseDoubleClickEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_WheelEvent")]
	public static extern void QGraphicsScene_WheelEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_InputMethodEvent")]
	public static extern void QGraphicsScene_InputMethodEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_DrawBackground")]
	public static extern void QGraphicsScene_DrawBackground(void* c_this, void* painter, void* rect);
	[LinkName("QGraphicsScene_DrawForeground")]
	public static extern void QGraphicsScene_DrawForeground(void* c_this, void* painter, void* rect);
	[LinkName("QGraphicsScene_FocusNextPrevChild")]
	public static extern bool QGraphicsScene_FocusNextPrevChild(void* c_this, bool next);
	[LinkName("QGraphicsScene_Connect_Changed")]
	public static extern void QGraphicsScene_Connect_Changed(void* c_this, c_intptr slot);
	[LinkName("QGraphicsScene_Connect_SceneRectChanged")]
	public static extern void QGraphicsScene_Connect_SceneRectChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsScene_Connect_SelectionChanged")]
	public static extern void QGraphicsScene_Connect_SelectionChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsScene_Connect_FocusItemChanged")]
	public static extern void QGraphicsScene_Connect_FocusItemChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsScene_Tr2")]
	public static extern libqt_string QGraphicsScene_Tr2(char8* s, char8* c);
	[LinkName("QGraphicsScene_Tr3")]
	public static extern libqt_string QGraphicsScene_Tr3(char8* s, char8* c, int32 n);
	[LinkName("QGraphicsScene_Render2")]
	public static extern void QGraphicsScene_Render2(void* c_this, void* painter, void* target);
	[LinkName("QGraphicsScene_Render3")]
	public static extern void QGraphicsScene_Render3(void* c_this, void* painter, void* target, void* source);
	[LinkName("QGraphicsScene_Render4")]
	public static extern void QGraphicsScene_Render4(void* c_this, void* painter, void* target, void* source, int64 aspectRatioMode);
	[LinkName("QGraphicsScene_Items1")]
	public static extern void*[] QGraphicsScene_Items1(void* c_this, int64 order);
	[LinkName("QGraphicsScene_Items22")]
	public static extern void*[] QGraphicsScene_Items22(void* c_this, void* pos, int64 mode);
	[LinkName("QGraphicsScene_Items3")]
	public static extern void*[] QGraphicsScene_Items3(void* c_this, void* pos, int64 mode, int64 order);
	[LinkName("QGraphicsScene_Items4")]
	public static extern void*[] QGraphicsScene_Items4(void* c_this, void* pos, int64 mode, int64 order, void* deviceTransform);
	[LinkName("QGraphicsScene_Items23")]
	public static extern void*[] QGraphicsScene_Items23(void* c_this, void* rect, int64 mode);
	[LinkName("QGraphicsScene_Items32")]
	public static extern void*[] QGraphicsScene_Items32(void* c_this, void* rect, int64 mode, int64 order);
	[LinkName("QGraphicsScene_Items42")]
	public static extern void*[] QGraphicsScene_Items42(void* c_this, void* rect, int64 mode, int64 order, void* deviceTransform);
	[LinkName("QGraphicsScene_Items25")]
	public static extern void*[] QGraphicsScene_Items25(void* c_this, void* path, int64 mode);
	[LinkName("QGraphicsScene_Items34")]
	public static extern void*[] QGraphicsScene_Items34(void* c_this, void* path, int64 mode, int64 order);
	[LinkName("QGraphicsScene_Items44")]
	public static extern void*[] QGraphicsScene_Items44(void* c_this, void* path, int64 mode, int64 order, void* deviceTransform);
	[LinkName("QGraphicsScene_Items7")]
	public static extern void*[] QGraphicsScene_Items7(void* c_this, double x, double y, double w, double h, int64 mode, int64 order, void* deviceTransform);
	[LinkName("QGraphicsScene_CollidingItems2")]
	public static extern void*[] QGraphicsScene_CollidingItems2(void* c_this, void* item, int64 mode);
	[LinkName("QGraphicsScene_SetSelectionArea2")]
	public static extern void QGraphicsScene_SetSelectionArea2(void* c_this, void* path, int64 selectionOperation);
	[LinkName("QGraphicsScene_SetSelectionArea3")]
	public static extern void QGraphicsScene_SetSelectionArea3(void* c_this, void* path, int64 selectionOperation, int64 mode);
	[LinkName("QGraphicsScene_SetSelectionArea4")]
	public static extern void QGraphicsScene_SetSelectionArea4(void* c_this, void* path, int64 selectionOperation, int64 mode, void* deviceTransform);
	[LinkName("QGraphicsScene_AddEllipse22")]
	public static extern void* QGraphicsScene_AddEllipse22(void* c_this, void* rect, void* pen);
	[LinkName("QGraphicsScene_AddEllipse3")]
	public static extern void* QGraphicsScene_AddEllipse3(void* c_this, void* rect, void* pen, void* brush);
	[LinkName("QGraphicsScene_AddLine22")]
	public static extern void* QGraphicsScene_AddLine22(void* c_this, void* line, void* pen);
	[LinkName("QGraphicsScene_AddPath2")]
	public static extern void* QGraphicsScene_AddPath2(void* c_this, void* path, void* pen);
	[LinkName("QGraphicsScene_AddPath3")]
	public static extern void* QGraphicsScene_AddPath3(void* c_this, void* path, void* pen, void* brush);
	[LinkName("QGraphicsScene_AddRect22")]
	public static extern void* QGraphicsScene_AddRect22(void* c_this, void* rect, void* pen);
	[LinkName("QGraphicsScene_AddRect3")]
	public static extern void* QGraphicsScene_AddRect3(void* c_this, void* rect, void* pen, void* brush);
	[LinkName("QGraphicsScene_AddText2")]
	public static extern void* QGraphicsScene_AddText2(void* c_this, libqt_string text, void* font);
	[LinkName("QGraphicsScene_AddSimpleText2")]
	public static extern void* QGraphicsScene_AddSimpleText2(void* c_this, libqt_string text, void* font);
	[LinkName("QGraphicsScene_AddWidget2")]
	public static extern void* QGraphicsScene_AddWidget2(void* c_this, void* widget, int64 wFlags);
	[LinkName("QGraphicsScene_AddEllipse5")]
	public static extern void* QGraphicsScene_AddEllipse5(void* c_this, double x, double y, double w, double h, void* pen);
	[LinkName("QGraphicsScene_AddEllipse6")]
	public static extern void* QGraphicsScene_AddEllipse6(void* c_this, double x, double y, double w, double h, void* pen, void* brush);
	[LinkName("QGraphicsScene_AddLine5")]
	public static extern void* QGraphicsScene_AddLine5(void* c_this, double x1, double y1, double x2, double y2, void* pen);
	[LinkName("QGraphicsScene_AddRect5")]
	public static extern void* QGraphicsScene_AddRect5(void* c_this, double x, double y, double w, double h, void* pen);
	[LinkName("QGraphicsScene_AddRect6")]
	public static extern void* QGraphicsScene_AddRect6(void* c_this, double x, double y, double w, double h, void* pen, void* brush);
	[LinkName("QGraphicsScene_SetFocusItem2")]
	public static extern void QGraphicsScene_SetFocusItem2(void* c_this, void* item, int64 focusReason);
	[LinkName("QGraphicsScene_SetFocus1")]
	public static extern void QGraphicsScene_SetFocus1(void* c_this, int64 focusReason);
	[LinkName("QGraphicsScene_Invalidate5")]
	public static extern void QGraphicsScene_Invalidate5(void* c_this, double x, double y, double w, double h, int64 layers);
	[LinkName("QGraphicsScene_Update1")]
	public static extern void QGraphicsScene_Update1(void* c_this, void* rect);
	[LinkName("QGraphicsScene_Invalidate1")]
	public static extern void QGraphicsScene_Invalidate1(void* c_this, void* rect);
	[LinkName("QGraphicsScene_Invalidate22")]
	public static extern void QGraphicsScene_Invalidate22(void* c_this, void* rect, int64 layers);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsScene_Delete")]
	public static extern void QGraphicsScene_Delete(void* self);
}